--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text&family=Cousine&display=swap');
 
 body {
-  background-color: #888;
+  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
