--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,19 +21,19 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
 
-.titleAndImgContainer h1 {
-  font-family: 'Big Shoulders Stencil Text', cursive;
-  color: rgb(163, 234, 110);
-  margin-top: 17px;
-  margin-bottom: 5px;
-  font-size: 2.8rem;
-  border-bottom: 2px dotted rgb(163, 234, 110);
-}
+  h1 {
+    font-family: 'Big Shoulders Stencil Text', cursive;
+    color: rgb(163, 234, 110);
+    margin-top: 17px;
+    margin-bottom: 5px;
+    font-size: 2.8rem;
+    border-bottom: 2px dotted rgb(163, 234, 110);
+  }
 
-.titleAndImgContainer img {
-  width: 80px;
+  img {
+    width: 80px;
+  }
 }
 
 .scores-wrapper {
@@ -49,6 +49,10 @@ body {
   height: 70vmin;
   width: 70vmin;
   margin-right: 40px;
+
+  @media only screen and (max-width: 1000px) {
+    margin-right: 0;
+  }
 }
 
 .snake {
@@ -68,16 +72,16 @@ body {
   align-items: center;
   overflow-y: scroll;
   max-height: 70vh;
-}
 
-#leaderboard h2 {
-  margin-top: 40px;
-  margin-bottom: 10px;
-  color: white;
-}
+  h2 {
+    margin-top: 40px;
+    margin-bottom: 10px;
+    color: white;
+  }
 
-#leaderboard table {
-  overflow-y: scroll;
+  table {
+    overflow-y: scroll;
+  }
 }
 
 th,
@@ -92,29 +96,29 @@ form {
   flex-direction: column;
   align-items: center;
   text-align: center;
-}
 
-form input {
-  width: 80%;
-  padding: 7px;
-  margin-top: 13px;
-  border-radius: 10px;
-  border: none;
-}
+  input {
+    width: 80%;
+    padding: 7px;
+    margin-top: 13px;
+    border-radius: 10px;
+    border: none;
+  }
 
-form input[type='submit'] {
-  width: 83%;
-  font-size: 1.1rem;
-}
+  input[type='submit'] {
+    width: 83%;
+    font-size: 1.1rem;
+  }
 
-form label {
-  color: #fff;
-  width: 80%;
-}
+  label {
+    color: #fff;
+    width: 80%;
+  }
 
-form .invalid-name-error {
-  color: rgb(255, 108, 108);
-  margin-top: 7px;
+  .invalid-name-error {
+    color: rgb(255, 108, 108);
+    margin-top: 7px;
+  }
 }
 
 footer {
@@ -123,14 +127,8 @@ footer {
   bottom: 4px;
   width: 95%;
   text-align: center;
-}
 
-footer a {
-  color: rgb(163, 234, 110);
-}
-
-@media only screen and (max-width: 1000px) {
-  #game-board {
-    margin-right: 0;
+  a {
+    color: rgb(163, 234, 110);
   }
 }
